// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/time-picker/demo/12hours.js correctly test 1`] = `
<div>
  <span
    class="jc-time-picker "
  >
    <input
      class="jc-time-picker-input"
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="jc-time-picker-icon"
    />
  </span>
  <span
    class="jc-time-picker "
  >
    <input
      class="jc-time-picker-input"
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="jc-time-picker-icon"
    />
  </span>
  <span
    class="jc-time-picker "
  >
    <input
      class="jc-time-picker-input"
      placeholder="Select time"
      type="text"
      value=""
    />
    <span
      class="jc-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/addon.js correctly test 1`] = `
<span
  class="jc-time-picker "
>
  <input
    class="jc-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="jc-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/basic.js correctly test 1`] = `
<span
  class="jc-time-picker "
>
  <input
    class="jc-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="jc-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/disabled.js correctly test 1`] = `
<span
  class="jc-time-picker "
>
  <input
    class="jc-time-picker-input"
    disabled=""
    placeholder="Select time"
    type="text"
    value="12:08:23"
  />
  <span
    class="jc-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/hide-column.js correctly test 1`] = `
<span
  class="jc-time-picker "
>
  <input
    class="jc-time-picker-input"
    placeholder="Select time"
    type="text"
    value="12:08"
  />
  <span
    class="jc-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/interval-options.js correctly test 1`] = `
<span
  class="jc-time-picker "
>
  <input
    class="jc-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="jc-time-picker-icon"
  />
</span>
`;

exports[`renders ./components/time-picker/demo/size.js correctly test 1`] = `
<div>
  <span
    class="jc-time-picker jc-time-picker-large"
  >
    <input
      class="jc-time-picker-input"
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="jc-time-picker-icon"
    />
  </span>
  <span
    class="jc-time-picker "
  >
    <input
      class="jc-time-picker-input"
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="jc-time-picker-icon"
    />
  </span>
  <span
    class="jc-time-picker jc-time-picker-small"
  >
    <input
      class="jc-time-picker-input"
      placeholder="Select time"
      type="text"
      value="12:08:23"
    />
    <span
      class="jc-time-picker-icon"
    />
  </span>
</div>
`;

exports[`renders ./components/time-picker/demo/value.js correctly test 1`] = `
<span
  class="jc-time-picker "
>
  <input
    class="jc-time-picker-input"
    placeholder="Select time"
    type="text"
    value=""
  />
  <span
    class="jc-time-picker-icon"
  />
</span>
`;
